Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL)
Description
USE test;
|
SET SESSION innodb_compression_default=1;
|
SET GLOBAL innodb_compression_level=0;
|
CREATE TABLE t(c INT);
|
Leads to:
|
10.5.4 69077dea25f6e7cab4ff8927e4429ad62af9de49 |
2020-05-19 08:52:46 0x14ecdb935700 InnoDB: Assertion failure in file /test/10.5_opt/storage/innobase/dict/dict0mem.cc line 149
|
InnoDB: Failing assertion: dict_tf2_is_valid(flags, flags2)
|
|
10.5.4 69077dea25f6e7cab4ff8927e4429ad62af9de49 |
Core was generated by `/test/MD160520-mariadb-10.5.4-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
[Current thread is 1 (Thread 0x153bea836700 (LWP 1289077))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
#1 0x0000556e9614d617 in my_write_core (sig=sig@entry=6) at /test/10.5_opt/mysys/stacktrace.c:518
|
#2 0x0000556e95b100fa in handle_fatal_signal (sig=6) at /test/10.5_opt/sql/signal_handler.cc:329
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
|
#5 0x0000153be8f7a801 in __GI_abort () at abort.c:79
|
#6 0x0000556e95819828 in ut_dbg_assertion_failed (expr=expr@entry=0x556e96488f48 "dict_tf2_is_valid(flags, flags2)", file=file@entry=0x556e96488ed8 "/test/10.5_opt/storage/innobase/dict/dict0mem.cc", line=line@entry=149) at /test/10.5_opt/storage/innobase/ut/ut0dbg.cc:60
|
#7 0x0000556e9602fc78 in dict_mem_table_create (name=name@entry=0x153bea832720 "test/t", space=space@entry=0x0, n_cols=1, n_v_cols=n_v_cols@entry=0, flags=161, flags2=80) at /test/10.5_opt/storage/innobase/dict/dict0mem.cc:149
|
#8 0x0000556e95e40062 in create_table_info_t::create_table_def (this=0x153bea8326c0) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:10534
|
#9 0x0000556e95e3e93d in create_table_info_t::create_table (this=this@entry=0x153bea8326c0, create_fk=create_fk@entry=true) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:12579
|
#10 0x0000556e95e45fca in ha_innobase::create (this=<optimized out>, name=0x153bea8348f0 "./test/t", form=<optimized out>, create_info=<optimized out>, file_per_table=<optimized out>, trx=<optimized out>) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:13128
|
#11 0x0000556e95b18ba8 in handler::ha_create (this=0x153bc586d030, name=<optimized out>, form=0x153bea832c60, info_arg=0x153bea834cd0) at /test/10.5_opt/sql/handler.cc:4902
|
#12 0x0000556e95b19401 in ha_create_table (thd=thd@entry=0x153bc5812018, path=path@entry=0x153bea8348f0 "./test/t", db=0x153bc58477f0 "test", table_name=0x153bc58470e8 "t", create_info=create_info@entry=0x153bea834cd0, frm=frm@entry=0x153bea8348e0) at /test/10.5_opt/sql/handler.cc:5366
|
#13 0x0000556e959adff2 in create_table_impl (thd=thd@entry=0x153bc5812018, orig_db=..., orig_table_name=..., db=..., table_name=..., path=path@entry=0x153bea8348f0 "./test/t", options=..., create_info=0x153bea834cd0, alter_info=0x153bea834c00, create_table_mode=0, is_trans=0x153bea834b77, key_info=0x153bea8348d8, key_count=0x153bea8348d4, frm=0x153bea8348e0) at /test/10.5_opt/sql/sql_table.cc:5172
|
#14 0x0000556e959ae3fb in mysql_create_table_no_lock (thd=thd@entry=0x153bc5812018, db=db@entry=0x153bc5847138, table_name=table_name@entry=0x153bc5847148, create_info=create_info@entry=0x153bea834cd0, alter_info=0x153bea834c00, is_trans=is_trans@entry=0x153bea834b77, create_table_mode=0, table_list=0x153bc5847120) at /test/10.5_opt/sql/sql_table.cc:5256
|
#15 0x0000556e959ae611 in mysql_create_table (thd=thd@entry=0x153bc5812018, create_table=create_table@entry=0x153bc5847120, create_info=create_info@entry=0x153bea834cd0, alter_info=alter_info@entry=0x153bea834c00) at /test/10.5_opt/sql/sql_table.cc:5348
|
#16 0x0000556e959af9c1 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x153bc5812018) at /test/10.5_opt/sql/sql_table.cc:11873
|
#17 0x0000556e9591a5d0 in mysql_execute_command (thd=thd@entry=0x153bc5812018) at /test/10.5_opt/sql/sql_parse.cc:5912
|
#18 0x0000556e9592182c in mysql_parse (thd=0x153bc5812018, rawbuf=<optimized out>, length=21, parser_state=0x153bea8354b0, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.5_opt/sql/sql_parse.cc:7957
|
#19 0x0000556e95916e75 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x153bc5812018, packet=packet@entry=0x153bc583a019 "CREATE TABLE t(c INT)", packet_length=packet_length@entry=21, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_opt/sql/sql_parse.cc:1839
|
#20 0x0000556e95915106 in do_command (thd=0x153bc5812018) at /test/10.5_opt/sql/sql_parse.cc:1358
|
#21 0x0000556e95a09bf1 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x153be84329b8, put_in_cache=put_in_cache@entry=true) at /test/10.5_opt/sql/sql_connect.cc:1411
|
#22 0x0000556e95a09f54 in handle_one_connection (arg=arg@entry=0x153be84329b8) at /test/10.5_opt/sql/sql_connect.cc:1313
|
#23 0x0000556e95d7543a in pfs_spawn_thread (arg=0x153be844b018) at /test/10.5_opt/storage/perfschema/pfs.cc:2201
|
#24 0x0000153be9c5d6db in start_thread (arg=0x153bea836700) at pthread_create.c:463
|
#25 0x0000153be905b88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
|
10.5.4 69077dea25f6e7cab4ff8927e4429ad62af9de49 |
Core was generated by `/test/MD160520-mariadb-10.5.4-linux-x86_64-opt/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
[Current thread is 1 (Thread 0x151a6d484700 (LWP 1298866))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
#1 0x000055b31c328617 in my_write_core (sig=sig@entry=6) at /test/10.5_opt/mysys/stacktrace.c:518
|
#2 0x000055b31bceb0fa in handle_fatal_signal (sig=6) at /test/10.5_opt/sql/signal_handler.cc:329
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
|
#5 0x0000151a6bbc8801 in __GI_abort () at abort.c:79
|
#6 0x000055b31b9f4828 in ut_dbg_assertion_failed (
|
expr=expr@entry=0x55b31c663f48 "dict_tf2_is_valid(flags, flags2)",
|
file=file@entry=0x55b31c663ed8 "/test/10.5_opt/storage/innobase/dict/dict0mem.cc",
|
line=line@entry=149) at /test/10.5_opt/storage/innobase/ut/ut0dbg.cc:60
|
#7 0x000055b31c20ac78 in dict_mem_table_create (name=name@entry=0x151a6d480720 "test/t",
|
space=space@entry=0x0, n_cols=1, n_v_cols=n_v_cols@entry=0, flags=161, flags2=80)
|
at /test/10.5_opt/storage/innobase/dict/dict0mem.cc:149
|
#8 0x000055b31c01b062 in create_table_info_t::create_table_def (this=0x151a6d4806c0)
|
at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:10534
|
#9 0x000055b31c01993d in create_table_info_t::create_table (this=this@entry=0x151a6d4806c0,
|
create_fk=create_fk@entry=true) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:12579
|
#10 0x000055b31c020fca in ha_innobase::create (this=<optimized out>, name=0x151a6d4828f0 "./test/t",
|
form=<optimized out>, create_info=<optimized out>, file_per_table=<optimized out>,
|
trx=<optimized out>) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:13128
|
#11 0x000055b31bcf3ba8 in handler::ha_create (this=0x151a4a46d030, name=<optimized out>,
|
form=0x151a6d480c60, info_arg=0x151a6d482cd0) at /test/10.5_opt/sql/handler.cc:4902
|
#12 0x000055b31bcf4401 in ha_create_table (thd=thd@entry=0x151a4a412018,
|
path=path@entry=0x151a6d4828f0 "./test/t", db=0x151a4a4477f0 "test",
|
table_name=0x151a4a4470e8 "t", create_info=create_info@entry=0x151a6d482cd0,
|
frm=frm@entry=0x151a6d4828e0) at /test/10.5_opt/sql/handler.cc:5366
|
#13 0x000055b31bb88ff2 in create_table_impl (thd=thd@entry=0x151a4a412018, orig_db=...,
|
orig_table_name=..., db=..., table_name=..., path=path@entry=0x151a6d4828f0 "./test/t",
|
options=..., create_info=0x151a6d482cd0, alter_info=0x151a6d482c00, create_table_mode=0,
|
is_trans=0x151a6d482b77, key_info=0x151a6d4828d8, key_count=0x151a6d4828d4, frm=0x151a6d4828e0)
|
at /test/10.5_opt/sql/sql_table.cc:5172
|
#14 0x000055b31bb893fb in mysql_create_table_no_lock (thd=thd@entry=0x151a4a412018,
|
db=db@entry=0x151a4a447138, table_name=table_name@entry=0x151a4a447148,
|
create_info=create_info@entry=0x151a6d482cd0, alter_info=0x151a6d482c00,
|
is_trans=is_trans@entry=0x151a6d482b77, create_table_mode=0, table_list=0x151a4a447120)
|
at /test/10.5_opt/sql/sql_table.cc:5256
|
#15 0x000055b31bb89611 in mysql_create_table (thd=thd@entry=0x151a4a412018,
|
create_table=create_table@entry=0x151a4a447120, create_info=create_info@entry=0x151a6d482cd0,
|
alter_info=alter_info@entry=0x151a6d482c00) at /test/10.5_opt/sql/sql_table.cc:5348
|
#16 0x000055b31bb8a9c1 in Sql_cmd_create_table_like::execute (this=<optimized out>,
|
thd=0x151a4a412018) at /test/10.5_opt/sql/sql_table.cc:11873
|
#17 0x000055b31baf55d0 in mysql_execute_command (thd=thd@entry=0x151a4a412018)
|
at /test/10.5_opt/sql/sql_parse.cc:5912
|
#18 0x000055b31bafc82c in mysql_parse (thd=0x151a4a412018, rawbuf=<optimized out>, length=21,
|
parser_state=0x151a6d4834b0, is_com_multi=<optimized out>, is_next_command=<optimized out>)
|
at /test/10.5_opt/sql/sql_parse.cc:7957
|
#19 0x000055b31baf1e75 in dispatch_command (command=command@entry=COM_QUERY,
|
thd=thd@entry=0x151a4a412018, packet=packet@entry=0x151a4a43a019 "CREATE TABLE t(c INT)",
|
packet_length=packet_length@entry=21, is_com_multi=is_com_multi@entry=false,
|
is_next_command=is_next_command@entry=false) at /test/10.5_opt/sql/sql_parse.cc:1839
|
#20 0x000055b31baf0106 in do_command (thd=0x151a4a412018) at /test/10.5_opt/sql/sql_parse.cc:1358
|
#21 0x000055b31bbe4bf1 in do_handle_one_connection (connect=<optimized out>,
|
connect@entry=0x151a6b0329b8, put_in_cache=put_in_cache@entry=true)
|
at /test/10.5_opt/sql/sql_connect.cc:1411
|
#22 0x000055b31bbe4f54 in handle_one_connection (arg=arg@entry=0x151a6b0329b8)
|
at /test/10.5_opt/sql/sql_connect.cc:1313
|
#23 0x000055b31bf5043a in pfs_spawn_thread (arg=0x151a6b04b018)
|
at /test/10.5_opt/storage/perfschema/pfs.cc:2201
|
#24 0x0000151a6c8ab6db in start_thread (arg=0x151a6d484700) at pthread_create.c:463
|
#25 0x0000151a6bca988f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.2.32 (dbg), 10.2.32 (opt), 10.3.23 (dbg), 10.3.23 (opt), 10.4.13 (dbg), 10.4.13 (opt), 10.5.2 (dbg), 10.5.2 (opt), 10.5.3 (dbg), 10.5.3 (opt), 10.5.4 (dbg), 10.5.4 (opt)
Bug confirmed not present in:
MariaDB: 10.1.45 (dbg), 10.1.45 (opt)
MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)
Attachments
Issue Links
- relates to
-
MDEV-12873 InnoDB SYS_TABLES.TYPE incompatibility for PAGE_COMPRESSED=YES in MariaDB 10.2.2 to 10.2.6
-
- Closed
-
-
MDEV-17989 InnoDB: Failing assertion: dict_tf2_is_valid(flags, flags2)
-
- Closed
-